--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
     add_definitions(-g -Wall)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
     add_definitions(-g -Wall)
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL MSVC)
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     message("-- compiler is MSVC")
 	add_compile_options(/Zi /Wall /permissive- /Zc:__cplusplus)
 endif ()
