removed VS 2017, added VS 2022

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,14 @@
 environment:
   matrix:
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+     GENERATOR: "Visual Studio 16 2019 Win64"
+     CONFIG: Debug
+
+   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+     GENERATOR: "Visual Studio 16 2019 Win64"
+     CONFIG: Release
+
+   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
      GENERATOR: "Visual Studio 16 2019"
      CONFIG: Debug
 
@@ -8,20 +16,20 @@ environment:
      GENERATOR: "Visual Studio 16 2019"
      CONFIG: Release
 
-   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-     GENERATOR: "Visual Studio 15 2017 Win64"
+   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+     GENERATOR: "Visual Studio 17 2022 Win64"
      CONFIG: Debug
-  
-   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-     GENERATOR: "Visual Studio 15 2017 Win64"
+
+   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+     GENERATOR: "Visual Studio 17 2022 Win64"
      CONFIG: Release
-  
-   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-     GENERATOR: "Visual Studio 15 2017"
+
+   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+     GENERATOR: "Visual Studio 17 2022"
      CONFIG: Debug
-  
-   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-     GENERATOR: "Visual Studio 15 2017"
+
+   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+     GENERATOR: "Visual Studio 17 2022"
      CONFIG: Release
 
 matrix:
