--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,35 +1,35 @@
 environment:
   matrix:
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-     GENERATOR: "Visual Studio 16 2019" -A x64
+     GENERATOR: "Visual Studio 16 2019 -A x64"
      CONFIG: Debug
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-     GENERATOR: "Visual Studio 16 2019" -A x64
+     GENERATOR: "Visual Studio 16 2019 -A x64"
      CONFIG: Release
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-     GENERATOR: "Visual Studio 16 2019" -A Win32
+     GENERATOR: "Visual Studio 16 2019 -A Win32"
      CONFIG: Debug
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-     GENERATOR: "Visual Studio 16 2019" -A Win32
+     GENERATOR: "Visual Studio 16 2019 -A Win32"
      CONFIG: Release
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-     GENERATOR: "Visual Studio 17 2022" -A x64
+     GENERATOR: "Visual Studio 17 2022 -A x64"
      CONFIG: Debug
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-     GENERATOR: "Visual Studio 17 2022" -A x64
+     GENERATOR: "Visual Studio 17 2022 -A x64"
      CONFIG: Release
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-     GENERATOR: "Visual Studio 17 2022" -A Win32
+     GENERATOR: "Visual Studio 17 2022 -A Win32"
      CONFIG: Debug
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-     GENERATOR: "Visual Studio 17 2022" -A Win32
+     GENERATOR: "Visual Studio 17 2022 -A Win32"
      CONFIG: Release
 
 matrix:
