--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
 environment:
   matrix:
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-     GENERATOR: "Visual Studio 16 2019 -A x64"
+     GENERATOR: "Visual Studio 16 2019 -A Win64"
      CONFIG: Debug
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-     GENERATOR: "Visual Studio 16 2019 -A x64"
+     GENERATOR: "Visual Studio 16 2019 -A Win64"
      CONFIG: Release
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
@@ -17,11 +17,11 @@ environment:
      CONFIG: Release
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-     GENERATOR: "Visual Studio 17 2022 -A x64"
+     GENERATOR: "Visual Studio 17 2022 -A Win64"
      CONFIG: Debug
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-     GENERATOR: "Visual Studio 17 2022 -A x64"
+     GENERATOR: "Visual Studio 17 2022 -A Win64"
      CONFIG: Release
 
    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
