--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -24,7 +24,12 @@ add_sample(trivial_skipper)
 add_sample(semantic_actions)
 add_sample(rule_intro)
 add_sample(roman_numerals)
-add_sample(self_filling_symbol_table)
 
-add_sample(json)
-add_sample(callback_json)
+if (Boost_FOUND)
+    if (NOT BUILD_WITHOUT_HANA)
+        add_sample(self_filling_symbol_table)
+        add_sample(json)
+    endif()
+
+    add_sample(callback_json)
+endif()
