Add test for the struct <-> tuple assignment machinery; fix errors.
Partially addresses #28.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,6 +56,7 @@ endmacro()
 #endforeach()
 
 add_test_executable(hl)
+add_test_executable(aggr_tuple_assignment)
 add_test_executable(parser_lazy_params)
 add_test_executable(parser_if_switch)
 add_test_executable(parser_rule)
