--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,3 +66,4 @@ add_test_executable(parser_action_with_params)
 add_test_executable(parser_symbol_table)
 add_test_executable(tracing)
 add_test_executable(parse_empty)
+add_test_executable(tuple_aggregate)
