--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -67,3 +67,4 @@ add_test_executable(parser_symbol_table)
 add_test_executable(tracing)
 add_test_executable(parse_empty)
 add_test_executable(tuple_aggregate)
+add_test_executable(case_fold_generated)
