Add no_case[] directive, and associated changes to char, string, and boolean parsers to make it work; uses the recently-added Unicode case-folding operation.  Needs docs.
Fixes #44.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -68,3 +68,4 @@ add_test_executable(tracing)
 add_test_executable(parse_empty)
 add_test_executable(tuple_aggregate)
 add_test_executable(case_fold_generated)
+add_test_executable(no_case)
