Add search() algorithm, and search_all_view + search_all range adaptor. search() finds the first occurrence of a match of the given parser. search_all produces a range of subranges, each of which is a nonoveralpping match of the given parser.
Partially addresses #64.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -46,6 +46,7 @@ macro(add_test_executable name)
     add_test(NAME ${name} COMMAND ${name} --gtest_catch_exceptions=1)
 endmacro()
 
+add_test_executable(search)
 add_test_executable(hl)
 add_test_executable(aggr_tuple_assignment)
 add_test_executable(parser_lazy_params)
