Add split_view + split range adaptor.  split produces a range of subranges, each of which is a nonoveralpping match of the given parser.
Fixes #64.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -47,6 +47,7 @@ macro(add_test_executable name)
 endmacro()
 
 add_test_executable(search)
+add_test_executable(split)
 add_test_executable(hl)
 add_test_executable(aggr_tuple_assignment)
 add_test_executable(parser_lazy_params)
