--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,6 +58,7 @@ add_test_executable(parser_symbol_table)
 add_test_executable(tracing)
 add_test_executable(parse_empty)
 add_test_executable(tuple_aggregate)
+add_test_executable(class_type)
 add_test_executable(case_fold_generated)
 add_test_executable(no_case)
 add_test_executable(merge_separate)
