Add replace_view and range adaptor replace.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -48,6 +48,7 @@ endmacro()
 
 add_test_executable(search)
 add_test_executable(split)
+add_test_executable(replace)
 add_test_executable(hl)
 add_test_executable(aggr_tuple_assignment)
 add_test_executable(parser_lazy_params)
