Add transform_replace range adaptor and transform_replace_view.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -50,6 +50,7 @@ add_test_executable(all_t)
 add_test_executable(search)
 add_test_executable(split)
 add_test_executable(replace)
+add_test_executable(transform_replace)
 add_test_executable(hl)
 add_test_executable(aggr_tuple_assignment)
 add_test_executable(parser_lazy_params)
