--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable(parser_ parser.cpp)
 set_property(TARGET parser_ PROPERTY CXX_STANDARD ${CXX_STD})
 target_link_libraries(parser_ parser gtest gtest_main ${link_flags})
 if (MSVC)
-    target_compile_options(parser_ PRIVATE /source-charset:utf-8)
+    target_compile_options(parser_ PRIVATE /source-charset:utf-8 /bigobj)
 endif ()
 add_test(NAME parser_ COMMAND parser_ ---gtest_catch_exceptions=1)
 
@@ -21,7 +21,7 @@ add_executable(parser_api parser_api.cpp)
 set_property(TARGET parser_api PROPERTY CXX_STANDARD ${CXX_STD})
 target_link_libraries(parser_api parser gtest gtest_main ${link_flags})
 if (MSVC)
-    target_compile_options(parser_api PRIVATE /source-charset:utf-8)
+    target_compile_options(parser_api PRIVATE /source-charset:utf-8 /bigobj)
 endif ()
 add_test(NAME parser_api COMMAND parser_api ---gtest_catch_exceptions=1)
 
@@ -41,7 +41,7 @@ macro(add_test_executable name)
     set_property(TARGET ${name} PROPERTY CXX_STANDARD ${CXX_STD})
     target_link_libraries(${name} parser gtest gtest_main ${link_flags})
     if (MSVC)
-        target_compile_options(${name} PRIVATE /source-charset:utf-8)
+        target_compile_options(${name} PRIVATE /source-charset:utf-8 /bigobj)
     endif ()
     add_test(NAME ${name} COMMAND ${name} --gtest_catch_exceptions=1)
 endmacro()
