--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -67,3 +67,4 @@ add_test_executable(class_type)
 add_test_executable(case_fold_generated)
 add_test_executable(no_case)
 add_test_executable(merge_separate)
+add_test_executable(parse_coords_new)
