Add quoted_string, to automate probably the most commonly-written parser of all time -- the quoted string.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -62,6 +62,7 @@ add_test_executable(parser_rule_with_params)
 add_test_executable(parser_action)
 add_test_executable(parser_action_with_params)
 add_test_executable(parser_symbol_table)
+add_test_executable(parser_quoted_string)
 add_test_executable(tracing)
 add_test_executable(parse_empty)
 add_test_executable(tuple_aggregate)
