--- a/.github/workflows/ubuntu-22.04.yml
+++ b/.github/workflows/ubuntu-22.04.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B ${{github.workspace}}/build -DBUILD_WITHOUT_HANA=true -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=${{matrix.compiler_version}} -DCXX_STD=${{matrix.cxx_std}}
+        run: cmake -B ${{github.workspace}}/build -DBUILD_WITHOUT_HANA=true -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=${{matrix.compiler_version}} -DCMAKE_CXX_STANDARD=${{matrix.cxx_std}}
   
       - name: Build
         working-directory: ${{github.workspace}}/build
