--- a/.github/workflows/windows-2022.yml
+++ b/.github/workflows/windows-2022.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B ${{github.workspace}}/build -DBUILD_WITHOUT_HANA=true -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCXX_STD=${{matrix.cxx_std}}
+        run: cmake -B ${{github.workspace}}/build -DBUILD_WITHOUT_HANA=true -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_STANDARD=${{matrix.cxx_std}}
   
       - name: Build
         working-directory: ${{github.workspace}}/build
