--- a/.github/workflows/macos-12.yml
+++ b/.github/workflows/macos-12.yml
@@ -2,9 +2,9 @@ name: macos-12 - Clang 13
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, develop, boost_review_changes ]
   pull_request:
-    branches: [ master, develop ]
+    branches: [ master, develop, boost_review_changes ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
