Add more tests of seq_parser and or_parser, to cover all the permutations of different parsers that they might use.
Fixes #126.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,6 +53,7 @@ add_test_executable(replace)
 add_test_executable(transform_replace)
 add_test_executable(hl)
 add_test_executable(aggr_tuple_assignment)
+add_test_executable(parser_attributes)
 add_test_executable(parser_lazy_params)
 add_test_executable(parser_if_switch)
 add_test_executable(parser_rule)
@@ -68,3 +69,7 @@ add_test_executable(case_fold_generated)
 add_test_executable(no_case)
 add_test_executable(merge_separate)
 add_test_executable(parse_coords_new)
+add_test_executable(parser_seq_permutations_1)
+add_test_executable(parser_seq_permutations_2)
+add_test_executable(parser_or_permutations_1)
+add_test_executable(parser_or_permutations_2)
