Add a permutation parser.
Fixes #159.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,6 +53,7 @@ add_test_executable(replace)
 add_test_executable(transform_replace)
 add_test_executable(hl)
 add_test_executable(aggr_tuple_assignment)
+add_test_executable(parser_perm)
 add_test_executable(parser_attributes)
 add_test_executable(parser_lazy_params)
 add_test_executable(parser_if_switch)
