--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - develop
+  pull_request:
+    branches:
+      - develop
 
 jobs:
   posix:
@@ -18,34 +21,24 @@ jobs:
       LDFLAGS: --coverage
       CMAKE_BUILD_PARALLEL_LEVEL: 4
     steps:
+    - name: Install lcov
+      run: sudo apt-get --no-install-recommends -y install lcov libgd-perl
+
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: sudo apt-get --no-install-recommends -y install cmake lcov g++-11 redis-server python3 libgd-perl
-    
-    - name: Setup Boost
-      run: ./tools/ci.py setup-boost --source-dir=$(pwd)
-    
-    - name: Build Boost
-      run: ./tools/ci.py build-b2-distro --toolset=gcc-11
-    
-    # Having our library there confuses the coverage reports
-    - name: Remove Boost.Redis from the b2 distro
-      run: rm -rf ~/boost-b2-distro/include/boost/redis
-
-    - name: Run CMake
-      run: cmake -DCMAKE_PREFIX_PATH=$HOME/boost-b2-distro --preset coverage .
+    - name: Configure CMake
+      run: cmake -DCMAKE_PREFIX_PATH=${{github.workspace}}/build --preset coverage .
 
     - name: Build
       run: cmake --build --preset coverage
 
     - name: Test
-      run: ctest --preset coverage
+      run: cmake --build --preset coverage --target check
 
     - name: Make the coverage file
       run: cmake --build --preset coverage --target coverage
 
     - name: Upload to codecov
       run: |
-        bash <(curl -s https://codecov.io/bash) -f ./build/coverage/coverage.info
+        bash <(curl -s https://codecov.io/bash) -f ${{github.workspace}}/build/coverage/coverage.info
