--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,3 +75,25 @@ add_test_executable(parser_seq_permutations_1)
 add_test_executable(parser_seq_permutations_2)
 add_test_executable(parser_or_permutations_1)
 add_test_executable(parser_or_permutations_2)
+
+set(COVERAGE_TRACE_COMMAND
+    lcov --capture
+    -output-file ${PROJECT_BINARY_DIR}/coverage.info
+    --directory ${PROJECT_BINARY_DIR}
+    --include ${PROJECT_SOURCE_DIR}/include/*
+)
+
+set(COVERAGE_HTML_COMMAND
+    genhtml --legend -f -q
+    ${PROJECT_BINARY_DIR}/coverage.info
+    --prefix ${PROJECT_SOURCE_DIR}
+    --output-directory ${PROJECT_BINARY_DIR}/coverage_html
+)
+
+add_custom_target(
+    coverage
+        COMMAND ${COVERAGE_TRACE_COMMAND}
+        COMMAND ${COVERAGE_HTML_COMMAND}
+        COMMENT "Generating coverage report"
+        VERBATIM
+)
