--- a/.github/workflows/ubuntu-22.04.yml
+++ b/.github/workflows/ubuntu-22.04.yml
@@ -2,9 +2,9 @@ name: Ubuntu-22.04 - GCC 10,11
 
 on:
   push:
-    branches: [ master, develop, boost_review_changes ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master, develop, boost_review_changes ]
+    branches: [ master, develop ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
