--- a/.github/workflows/windows-2019.yml
+++ b/.github/workflows/windows-2019.yml
@@ -2,9 +2,9 @@ name: windows-2019 - Visual Studio 2019
 
 on:
   push:
-    branches: [ master, develop, boost_review_changes ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master, develop, boost_review_changes ]
+    branches: [ master, develop ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
