Fix deficiencies in the CMake build:
- Clone minimal Boost dependencies so that the minimal Boost.Test header is
  available.

- Add boostdep-generated CMake code to the top of the top-level
  CMakeLists.txt.

Fixes #127.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -11,29 +11,31 @@ enable_testing()
 
 add_custom_target(run_examples COMMAND ${CMAKE_CTEST_COMMAND} -VV -C ${CMAKE_CFG_INTDIR})
 
-macro(add_sample name)
+macro(add_example name)
     add_executable(${name} ${name}.cpp)
-    target_link_libraries(${name} parser)
+    target_link_libraries(${name} parser ${ARGN})
     set_property(TARGET ${name} PROPERTY CXX_STANDARD ${CXX_STD})
     add_test(${name} ${CMAKE_CURRENT_BINARY_DIR}/${name})
 endmacro()
 
-add_sample(hello)
-add_sample(trivial)
-add_sample(trivial_skipper)
-add_sample(semantic_actions)
-add_sample(rule_intro)
-add_sample(struct_rule)
-add_sample(parsing_into_a_struct)
-add_sample(parsing_into_a_class)
-add_sample(roman_numerals)
-add_sample(user_error_handler)
+set(libs)
+if (BUILD_WITH_HANA)
+  set(libs boost)
+endif()
 
-if (Boost_FOUND)
-    if (NOT BUILD_WITHOUT_HANA)
-        add_sample(self_filling_symbol_table)
-        add_sample(json)
-    endif()
+add_example(hello ${libs})
+add_example(trivial ${libs})
+add_example(trivial_skipper ${libs})
+add_example(semantic_actions ${libs})
+add_example(rule_intro ${libs})
+add_example(struct_rule ${libs})
+add_example(parsing_into_a_struct ${libs})
+add_example(parsing_into_a_class ${libs})
+add_example(user_error_handler ${libs})
 
-    add_sample(callback_json)
+if (BUILD_WITH_HANA)
+  add_example(roman_numerals boost)
+  add_example(self_filling_symbol_table boost)
+  add_example(json boost)
+  add_example(callback_json boost)
 endif()
