--- a/.github/workflows/macos-12.yml
+++ b/.github/workflows/macos-12.yml
@@ -1,4 +1,4 @@
-name: macos-12 - Clang 13
+name: macos-12 - Clang 14
 
 on:
   push:
@@ -10,7 +10,6 @@ env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Debug
 
-# See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
 jobs:
   build:
     strategy:
@@ -20,17 +19,17 @@ jobs:
     runs-on: macos-12
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
   
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCXX_STD=${{matrix.cxx_std}}
-  
+        run: cmake -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DCXX_STD=${{ matrix.cxx_std }}
+
       - name: Build
-        working-directory: ${{github.workspace}}/build
-        run: make -j2
-  
+        working-directory: build
+        run: cmake --build .
+
       - name: Test
-        working-directory: ${{github.workspace}}/build
-        run: make check
+        working-directory: build
+        run: ctest -C ${{ env.BUILD_TYPE }} -j $(sysctl -n hw.ncpu) --output-on-failure
