Fix MSVC Compiler issue. MSVC in cmake has always been a boolean variable ( see https://cmake.org/cmake/help/latest/variable/MSVC.html) detecting the MSVC Compiler requires therefore "if (MSVC)"
further, the MSVC Compiler will always emit '199711L' for __cplusplus, if it is called without the option '/Zc:__cplusplus'

this odd behavior will break any version check in the headers.
e.g. './include/boost/parser/detail/text/detail/begin_end.hpp' or 'boost/hana/traits.hpp

therefore "add_compile_options(/Zc:__cplusplus)" is always nrequired for the MSVC compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,10 +44,10 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
     add_definitions(-Wall)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
     add_definitions(-Wall)
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL MSVC)
+elseif (MSVC)
     add_definitions(/W3)
+    add_compile_options(/Zc:__cplusplus)
 endif ()
-
 
 ##################################################
 # Build config
